--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -15,6 +15,8 @@ $azul: #03AED2;
 $blanco: #FFFFFF;
 $gris: #e1e1e1;
 $grisOscuro: #333333;
+$rojo: #f51d1d;
+$verde: #49ca16;
 
 $separacion: 5rem;
 
