Adding update button and functionalities.

--- a/src/scss/base/_botones.scss
+++ b/src/scss/base/_botones.scss
@@ -9,3 +9,11 @@
 .boton-azul {
     @include boton($azul, inline-block)
 }
+
+.boton-rojo-block {
+    @include boton($rojo, block)
+}
+
+.boton-verde-block {
+    @include boton($verde, block)
+}
