--- a/src/scss/base/_botones.scss
+++ b/src/scss/base/_botones.scss
@@ -1,19 +1,20 @@
 .boton-amarillo {
-    @include boton($amarillo, inline-block)
+    @include boton($amarillo, inline-block);
 }
 
 .boton-amarillo-block {
-    @include boton($amarillo, block)
+    @include boton($amarillo, block);
 }
 
 .boton-azul {
-    @include boton($azul, inline-block)
+    @include boton($azul, inline-block);
 }
 
 .boton-rojo-block {
-    @include boton($rojo, block)
+    @include boton($rojo, block);
+    width: 100%;
 }
 
 .boton-verde-block {
-    @include boton($verde, block)
+    @include boton($verde, block);
 }
